--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,15 @@
         "datetime.h": "c",
         "rtc.h": "c",
         "random": "c",
-        "limits": "c"
+        "limits": "c",
+        "*.inc": "c",
+        "memory_resource": "c",
+        "memory": "c",
+        "format": "c",
+        "fstream": "c",
+        "istream": "c",
+        "ostream": "c",
+        "sstream": "c",
+        "streambuf": "c"
     }
 }
